# avis

./: .gitignore  README.md
api/hum_service/: hum_service.Dockerfile  pyproject.toml
api/hum_service/app/: dependencies.py  main.py
api/hum_service/app/core/: config.py  log_config.py
api/hum_service/app/helpers/: constants.py  preprocess_helper.py
api/hum_service/app/routers/: api.py  health.py  songs.py
api/hum_service/app/services/: s3_service.py
api/hum_service/hum2song/: local_search.py  predict.sh  predict_private_test.sh  search.py
api/hum_service/hum2song/audio/: __init__.py  stft.py  tools.py
api/hum_service/hum2song/config/: config.py  local_config.py  preprocess.yaml
api/hum_service/hum2song/models/: myfaiss.py
api/hum_service/hum2song/preprocessed/: change_name.py  convert_name.py  index.index  index2id.pkl  saved_name.pkl  submission.csv
api/hum_service/hum2song/preprocessed/private_test/full_song/: FPT_Dong_Song_Loi_The_01_s.npy  FPT_Dong_Song_Loi_The_02_s.npy  FPT_Dong_Song_Loi_The_03_s.npy  Mua_Thu_Cho_Em_01_s.npy  Mua_Thu_Cho_Em_02_s.npy  Mua_Thu_Cho_Em_03_s.npy  Unravel_01_s.npy  Unravel_02_s.npy  Unravel_03_s.npy  Yoru_Ni_Kakeru_01_s.npy  Yoru_Ni_Kakeru_02_s.npy  Yoru_Ni_Kakeru_03_s.npy  Yume_To_Hazakura_01_s.npy  Yume_To_Hazakura_02_s.npy  (+22 more)
api/hum_service/hum2song/utils/: load_model.py  preprocess_test.py  utils.py
api/hum_service/hum_service/: app.py  dependencies.py
api/hum_service/hum_service/helpers/: preprocess_helper.py
api/hum_service/hum_service/routers/: songs.py
api/hum_service/hum_service/services/: s3_service.py
(+440 files in other folders)
